--- a/src/VOC.Client.WPF/Dashboard/DashboardView.xaml
+++ b/src/VOC.Client.WPF/Dashboard/DashboardView.xaml
@@ -7,6 +7,13 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
-        <Label>Dashbaord</Label>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="2*" />
+            <ColumnDefinition />
+        </Grid.ColumnDefinitions>
+
+        <Border Grid.Column="0">
+            
+        </Border>
     </Grid>
 </UserControl>
