--- a/src/VOC.Client.WPF/Dashboard/Templates.xaml
+++ b/src/VOC.Client.WPF/Dashboard/Templates.xaml
@@ -5,5 +5,8 @@
     <DataTemplate DataType="{x:Type local:DashboardViewModel}">
         <local:DashboardView />
     </DataTemplate>
-    
+
+    <DataTemplate DataType="{x:Type local:GameViewModel}">
+        <local:GameView />
+    </DataTemplate>
 </ResourceDictionary>
