addded some initial UI components, with some dummy dataproviders

--- a/src/VOC.Client.WPF/App.xaml
+++ b/src/VOC.Client.WPF/App.xaml
@@ -12,6 +12,7 @@
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Styles/Styles.xaml" />
                 <ResourceDictionary Source="Dashboard/Templates.xaml" />
+                <ResourceDictionary Source="GameConfiguration/Templates.xaml" />
             </ResourceDictionary.MergedDictionaries>
             <main:ViewModelLocator x:Key="Locator" d:IsDataSource="True" />
         </ResourceDictionary>
