--- a/src/VOC.Client.WPF/Styles/Buttons.xaml
+++ b/src/VOC.Client.WPF/Styles/Buttons.xaml
@@ -1,9 +1,8 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="Text.xaml" />
-        <ResourceDictionary Source="Buttons.xaml" />
-    </ResourceDictionary.MergedDictionaries>
+    <Style TargetType="{x:Type Button}">
+        <Setter Property="Padding" Value="10, 5" />
+    </Style>
     
 </ResourceDictionary>
