--- a/src/VOC.Client.WPF/GameConfiguration/ConfigurationView.xaml
+++ b/src/VOC.Client.WPF/GameConfiguration/ConfigurationView.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="VOC.Client.WPF.GameConfiguration.ConfigurationView"
+﻿<UserControl x:Class="VOC.Client.WPF.Configuration.ConfigurationView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:VOC.Client.WPF.GameConfiguration"
+             xmlns:local="clr-namespace:VOC.Client.WPF.Configuration"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300"
              d:DataContext="{d:DesignInstance local:ConfigurationViewModel}">
@@ -16,20 +16,27 @@
 
             <UniformGrid Columns="2" VerticalAlignment="Center">
                 <TextBlock Text="Port:" />
-                <TextBox Text="{Binding Port}" />
+                <TextBox VerticalAlignment="Center" Text="{Binding Port}" />
+
 
                 <TextBlock Text="Map:" />
-                <ComboBox ItemsSource="{Binding Maps}" SelectedIndex="0">
+                <ComboBox ItemsSource="{Binding Maps}" 
+                          SelectedItem="{Binding SelectedMap}">
                     <ComboBox.ItemTemplate>
                         <DataTemplate>
                             <TextBlock Text="{Binding Name}" />
                         </DataTemplate>
                     </ComboBox.ItemTemplate>
                 </ComboBox>
+
+                <TextBlock Text="Players: " />
+                <ComboBox ItemsSource="{Binding Players}" 
+                          SelectedItem="{Binding SelectedPlayerCount}" />
             </UniformGrid>
 
             <Border Grid.Row="1">
                 <Button Content="Start"
+                        Command="{Binding StartGameCommand}"
                         HorizontalAlignment="Center" />
             </Border>
         </Grid>
