--- a/src/VOC.Client.WPF/Main/MainWindow.xaml
+++ b/src/VOC.Client.WPF/Main/MainWindow.xaml
@@ -8,7 +8,7 @@
         Title="MainWindow" Height="350" Width="525"
         DataContext="{Binding MainViewModel, Source={StaticResource Locator}}">
     
-    <Grid>
+    <Border Padding="10, 50">
         <ContentControl DataContext="{Binding Content}" Content="{Binding}"   />
-    </Grid>
+    </Border>
 </Window>
