renamed startGame to createLobby and added template for lobbyview(model)

--- a/src/VOC.Client.WPF/App.xaml
+++ b/src/VOC.Client.WPF/App.xaml
@@ -13,6 +13,7 @@
                 <ResourceDictionary Source="Styles/Styles.xaml" />
                 <ResourceDictionary Source="Dashboard/Templates.xaml" />
                 <ResourceDictionary Source="GameConfiguration/Templates.xaml" />
+                <ResourceDictionary Source="Lobbies/Templates.xaml" />
             </ResourceDictionary.MergedDictionaries>
             <main:ViewModelLocator x:Key="Locator" d:IsDataSource="True" />
         </ResourceDictionary>
