--- a/src/VOC.Client.WPF/GameConfiguration/ConfigurationView.xaml
+++ b/src/VOC.Client.WPF/GameConfiguration/ConfigurationView.xaml
@@ -35,8 +35,8 @@
             </UniformGrid>
 
             <Border Grid.Row="1">
-                <Button Content="Start"
-                        Command="{Binding StartGameCommand}"
+                <Button Content="Create Lobby"
+                        Command="{Binding CreateLobbyCommand}"
                         HorizontalAlignment="Center" />
             </Border>
         </Grid>
