--- a/src/VOC.Client.WPF/Dashboard/Configuration/Templates.xaml
+++ b/src/VOC.Client.WPF/Dashboard/Configuration/Templates.xaml
@@ -1,6 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="clr-namespace:VOC.Client.WPF.Configuration">
+                    xmlns:local="clr-namespace:VOC.Client.WPF.Dashboard.Configuration">
 
     <DataTemplate DataType="{x:Type local:ConfigurationViewModel}">
         <local:ConfigurationView />
