--- a/src/VOC.Client.WPF/Dashboard/Lobbies/Templates.xaml
+++ b/src/VOC.Client.WPF/Dashboard/Lobbies/Templates.xaml
@@ -1,6 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="clr-namespace:VOC.Client.WPF.Lobbies">
+                    xmlns:local="clr-namespace:VOC.Client.WPF.Dashboard.Lobbies">
 
     <DataTemplate DataType="{x:Type local:LobbyViewModel}">
         <local:LobbyView />
