--- a/src/VOC.Client.WPF/Dashboard/Overview/DashboardView.xaml
+++ b/src/VOC.Client.WPF/Dashboard/Overview/DashboardView.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="VOC.Client.WPF.Dashboard.DashboardView"
+﻿<UserControl x:Class="VOC.Client.WPF.Dashboard.Overview.DashboardView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:VOC.Client.WPF.Dashboard"
+             xmlns:local="clr-namespace:VOC.Client.WPF.Dashboard.Overview"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300"
              d:DataContext="{d:DesignInstance local:DashboardViewModel}">
