Initial server commmunication

--- a/src/VOC.Client.WPF/Dashboard/Lobbies/LobbyView.xaml
+++ b/src/VOC.Client.WPF/Dashboard/Lobbies/LobbyView.xaml
@@ -20,9 +20,8 @@
         </Border>
 
         <Grid Grid.Row="1">
-            <ItemsControl ItemsSource="{Binding Players}" DisplayMemberPath="Name" />
-
-
+            <ItemsControl ItemsSource="{Binding Players}" 
+                          DisplayMemberPath="Name" />
         </Grid>
     </Grid>
 </UserControl>
