--- a/src/VOC.Client.WPF/App.xaml
+++ b/src/VOC.Client.WPF/App.xaml
@@ -11,9 +11,10 @@
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Styles/Styles.xaml" />
-                <ResourceDictionary Source="Dashboard/Overview/Templates.xaml" />
                 <ResourceDictionary Source="Dashboard/Configuration/Templates.xaml" />
                 <ResourceDictionary Source="Dashboard/Lobbies/Templates.xaml" />
+                <ResourceDictionary Source="Dashboard/Overview/Templates.xaml" />
+                <ResourceDictionary Source="Game/Templates.xaml" />
             </ResourceDictionary.MergedDictionaries>
             <main:ViewModelLocator x:Key="Locator" d:IsDataSource="True" />
         </ResourceDictionary>
